<resources>
    <string name="app_name">prac18</string>
    <string name="login">Login</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="back_to_sign_in">Back to Sign In</string>
    <string name="add_film">Add film</string>
    <string name="show_films">Show films</string>
</resources>