<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartPage"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/gray">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="26sp"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#222"
            android:id="@+id/reg_login"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="26sp"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textColor="#222"
            android:id="@+id/reg_password" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password"
            android:textColor="@color/black"
            android:textSize="26sp"/>

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:textColor="#222"
            android:id="@+id/reg_conf_password"/>

    </LinearLayout>

    <Button
        android:id="@+id/reg_signup"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/raduis"
        android:onClick="onClickRegSignUp"
        android:text="@string/sign_up"
        android:textSize="20sp" />

    <Button
        android:id="@+id/backtosignin"
        android:layout_width="110dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/raduis"
        android:onClick="onClickBack"
        android:text="@string/back_to_sign_in"
        android:textSize="10sp" />

</LinearLayout>